--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,35 @@
   margin: 0;
   font-family: 'Open Sans', sans-serif;
 }
+
+html, body {
+  background-color: #000;
+}
+
+.nav-container {
+  height: 80px;
+  background-color: #ff8400;
+  width: 100%;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+}
+
+.nav-main {
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nav-main h1 {
+  color: #fff;
+  font-size: 36px;
+}
+
+.contact-link {
+  color: #fff;
+  cursor: pointer;
+}
