--- a/css/styles.css
+++ b/css/styles.css
@@ -103,3 +103,35 @@ html, body {
 .btn-right {
   margin-left: 10px;
 }
+
+.list-container {
+  width: 100%;
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-list-item {
+  background-color: #333;
+  margin-bottom: 20px;
+  width: 100%;
+  border-radius: 8px;
+  padding: 20px;
+  max-width: 900px;
+}
+
+.card-list-item h3 {
+  color: #ff8400;
+  font-size: 18px;
+}
+
+.address-line {
+  color: #fff;
+  font-size: 14px;
+}
+
+.address-cep {
+  color: #8f8f8f;
+  font-size: 12px;
+}
