--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,12 @@ html, body {
   color: #fff;
   font-weight: bold;
   font-size: 14px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #d67814;
+  transition: 0.3s;
 }
 
 .btn-left {
