--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+@import 'modal.css';
+@import 'buttons.css';
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -85,30 +88,6 @@ html, body {
   justify-content: space-between;
 }
 
-.btn {
-  width: 250px;
-  height: 50px;
-  background-color: #ff8400;
-  border: 0;
-  border-radius: 3px;
-  color: #fff;
-  font-weight: bold;
-  font-size: 14px;
-  cursor: pointer;
-}
-
-.btn:hover {
-  background-color: #d67814;
-  transition: 0.3s;
-}
-
-.btn-left {
-  margin-right: 10px;
-}
-
-.btn-right {
-  margin-left: 10px;
-}
 
 .list-container {
   width: 100%;
